--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 
         
     <link rel="shortcut icon" href="favicon.ico"/>
@@ -111,6 +112,11 @@ align-items: center;
 @media screen and (max-width: 500px) {
 
     #ui{background-color:#8c8c8c;background-image:url('static/ui-mobile.png');}
+
+    *{
+        
+        font-size:25px;
+    }
 }
 </style>
 
