--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ align-items: center;
 
     #ui{background-color:#8c8c8c;background-image:url('static/ui-mobile.png');}
 
-
+    .blood div{padding-left:120px;}
 }
 </style>
 
@@ -400,7 +400,7 @@ $(window).resize(function(){
 
             $('.blood').css('width', screen_width +60);
 
-            $('.blood div').css('padding-left',110);
+
 
 
             $('#enemy'+i).css('left',diff_left+(screen_width-player_width)/2).css('top',(((screen_height_half*i)-player_height)));
