--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ align-items: center;
 
     #ui{background-color:#8c8c8c;background-image:url('static/ui-mobile.png');}
 
-    .blood div{padding-left:140px;}
+    .blood div{position:relative;margin-right:-30px;}
 }
 </style>
 
