--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@ align-items: center;
 
     #ui{background-color:#8c8c8c;background-image:url('static/ui-mobile.png');}
 
-    .blood div{position:relative;right:-30px;}
+    .blood div{position:relative;    right: -60px;
+    padding-left: 0;}
 }
 </style>
 
