--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ align-items: center;
 <div id="blood2" class="center blood" ><div >me gusta crear<br>experiencias<br>interactivas</div></div>
 
 <div id="enemy3" data-blood="3" data-dead="0" class="enemy"></div>
-<div id="blood3" class="center blood" ><div >esto es una<br>demostración<br>de lo que puedo<br>hacer</div></div>
+<div id="blood3" class="center blood" ><div >esto es una<br>demostración<br>de lo que<br>puedo hacer</div></div>
 
 <div id="enemy4" data-blood="4" data-dead="0" class="enemy"></div>
 <div id="blood4" class="center blood" >
