--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@ button{cursor:pointer;width:200px;margin-bottom:14px;border:4px white solid;disp
     /*IE*/
 }
 
-.enemy{
-z-index:3;background:url('static/enemy_walk2.gif');background-size:cover;width:100px;height:100px;position:absolute;
-}
+.enemy{z-index:3;background:url('static/enemy_walk2.gif');background-size:cover;width:100px;height:100px;position:absolute;}
 
 .blood{display:none;background-size:cover;z-index:1;position:absolute;height:600px;text-align:center;}
 
