--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="prefetch" href="static/face_attack.png" />
     <link rel="prefetch" href="static/ui2.png" />
     <link rel="prefetch" href="static/ui-mobile2.png" />
-    <link rel="prefetch" href="static/mp3/music.mp3" />
+    <link rel="prefetch" href="static/mp3/music2.mp3" />
     <link rel="prefetch" href="static/mp3/shoot5.mp3" />
 
     <meta property="og:image" content="https://vivirenremoto.github.io/doomcv/static/social.png">
@@ -192,7 +192,7 @@ align-items: center;
 
 
 <audio id="sound_music" loop>
-    <source src="static/mp3/music.mp3" type="audio/mp3">
+    <source src="static/mp3/music2.mp3" type="audio/mp3">
 </audio>
 
 <audio id="sound_shoot">
