--- a/index.html
+++ b/index.html
@@ -396,8 +396,8 @@ function startWalking(final_y){
                         }, 250);
 
                         
-                        $('#player').css('background-image', "url('static/stop2.gif')");
-                    }, 200);
+                        //$('#player').css('background-image', "url('static/stop2.gif')");
+                    }, 100);
 
                 }
             
