--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="prefetch" href="static/attack3.gif" />
     <link rel="prefetch" href="static/walk2.gif" />
     <link rel="prefetch" href="static/stop2.gif" />
+    <link rel="prefetch" href="static/end.gif" />
     <link rel="prefetch" href="static/enemy_walk2.gif" />
     <link rel="prefetch" href="static/dead2.gif" />
     <link rel="prefetch" href="static/floor.png" />
