--- a/index.html
+++ b/index.html
@@ -182,15 +182,24 @@ align-items: center;
 <div id="enemy3" data-blood="3" data-dead="0" class="enemy"></div>
 <div id="blood3" class=" blood" ><div >esto es una<br>demostración<br>de lo que<br>puedo hacer</div></div>
 
+
+
 <div id="enemy4" data-blood="4" data-dead="0" class="enemy"></div>
 <div id="blood4" class=" blood" >
+    <div >
+        ¿Conoces<br>DOOM Captcha?<br><br>
+        <button onclick="window.open('https://vivirenremoto.github.io/doomcaptcha/');">MÁS INFO</button>
+    </div>
+</div>
+
+<div id="enemy5" data-blood="5" data-dead="0" class="enemy"></div>
+<div id="blood5" class=" blood" >
     <div >
         <button onclick="document.location.reload()">¿Repetir?</button>
         <button onclick="share()">Compartir</button>
         <button onclick="window.open('https://vivirenremoto.github.io/')">Ver más</button>
     </div>
 </div>
-
 
 
 <audio id="sound_music" loop>
