--- a/en.html
+++ b/en.html
@@ -167,7 +167,7 @@ align-items: center;
 
 <a href="https://twitter.com/vivirenremoto" target="_blank" id="author">by @vivirenremoto</a>
 
-<a href="http://bit.ly/play_doom" id="play" target="_blank" style="display: inline;">
+<a href="https://bit.ly/2RwNywH" id="play" target="_blank" style="display: inline;">
     <span style="font-size:20px;" id="btn_cta" data-cta1="Nostalgia?" data-cta2="Buy game">Nostalgia?</span></a>
 
 <div id="player" ></div>
