--- a/en.html
+++ b/en.html
@@ -174,7 +174,7 @@ align-items: center;
 
 
 <div id="enemy1" data-blood="1" data-dead="0" class="enemy"></div>
-<div id="blood1" class=" blood" ><div >hello! i'm miquel<br>web developer<br>from spain</div></div>
+<div id="blood1" class=" blood" ><div >hello! i'm miquel<br>a web developer<br>from spain</div></div>
 
 <div id="enemy2" data-blood="2" data-dead="0" class="enemy"></div>
 <div id="blood2" class=" blood" ><div >i like to create<br>different<br>web experiences</div></div>
