--- a/en.html
+++ b/en.html
@@ -177,7 +177,7 @@ align-items: center;
 <div id="blood1" class=" blood" ><div >hello! i'm miquel<br>a web developer<br>from spain</div></div>
 
 <div id="enemy2" data-blood="2" data-dead="0" class="enemy"></div>
-<div id="blood2" class=" blood" ><div >i like to create<br>different<br>web experiences</div></div>
+<div id="blood2" class=" blood" ><div >i love to create<br>different<br>web experiences</div></div>
 
 <div id="enemy3" data-blood="3" data-dead="0" class="enemy"></div>
 <div id="blood3" class=" blood" ><div >this is a<br>demostration<br>of what<br>i can do</div></div>
