--- a/en.html
+++ b/en.html
@@ -180,7 +180,7 @@ align-items: center;
 <div id="blood2" class=" blood" ><div >i love to create<br>different<br>web experiences</div></div>
 
 <div id="enemy3" data-blood="3" data-dead="0" class="enemy"></div>
-<div id="blood3" class=" blood" ><div >this is a<br>demostration<br>of what<br>i can do</div></div>
+<div id="blood3" class=" blood" ><div >this is a<br>sneak peek<br>of what<br>i can do</div></div>
 
 
 
